--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ code {
 input,
 select {
 	background: #0c0c0c;
-	border: 1px solid #ffffff;
+	border: none;
 	color: white;
 	padding-left: 1.5rem;
 	border-radius: 0.8rem;
